# bodhi

./: .gitignore  .privacy-allowlist  CLAUDE.md  HANDOFF-EMAIL.txt  handoff.md  index.html  package.json  pnpm-lock.yaml  test-privacy.sh  vite.config.ts
.github/workflows/: deploy-pwa.yml  release-desktop.yml
docs/: design-research-buddhist-philosophy.md  design.md
public/: manifest.json
src/: App.tsx  CLAUDE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: CLAUDE.md  lib.rs  main.rs  sync_server.rs
src/components/: CLAUDE.md  ConfirmDialog.tsx  DailyTeaching.tsx  EnsoLoader.tsx  InkDivider.tsx  NoteEditor.tsx  NoteList.tsx  NoteListItem.tsx  PairingPanel.tsx  PrivacyPanel.tsx  SearchBar.tsx  SyncButton.tsx  TagFilter.tsx  TagInput.tsx  UpdateChecker.tsx
src/data/: note-presets.ts  teachings.json
src/hooks/: CLAUDE.md  useMediaQuery.ts  useNotes.ts  useSearch.ts
src/lib/: CLAUDE.md  crdt.ts  db-indexeddb.ts  db-sqlite.ts  db.ts  env.ts  leaf.ts  private-ip.ts  qr.ts  sync-client.ts
src/styles/: CLAUDE.md  index.css
src/types/: note.ts
