[package]
name = "bodhi"
version = "0.2.0"
edition = "2021"

[lib]
name = "bodhi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
automerge = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
local-ip-address = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
